AC_INIT([mkfbsdmnfst], [1.0.0], [], [], [http://www.mcplex.net])

dnl  ###  Read some macros.
builtin(include, ./dwm.m4)  dnl

AC_PROG_CC
AC_PROG_CXX
AC_CANONICAL_SYSTEM

DWM_SET_PKGVARS(mkfbsdmnfst,[mkfbsdmnfst-0.0.0])
DWM_GET_TAG([mkfbsdmnfst])

AC_CONFIG_FILES([Makefile.vars fbsd_manifest])
AC_OUTPUT
